# opencl-dice-roller

./: .gitignore  CMakeLists.txt  README.md  a.out  compKernel.cl  fillKernel.cl  kernel.cl  main.cpp  tst.cpp
